hphp/hack/test/typecheck/references/refs_in_array/element_assign1.php.exp
File "element_assign1.php", line 5, characters 8-10:
References are only permitted as function call arguments. (Typing[4299])
